# customs-trade-classification

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_local.py
data/: hts_data.json  loader.py  ofac_sdn.csv  prompt.md
server/: app.py  customs_env_environment.py  environment.py
tests/: test_graders.py
